<resources>
    <string name="app_name">FINAL FANTASY X</string>
    <string name="action_settings">FINAL FANTASY X</string>
    <string name="introduccion">Introduccion</string>
    <string name="Canciones">Canciones</string>
    <string name="personajes">PERSONAJES</string>
    <string name="yuna">Yuna</string>
    <string name="tidus">Tidus</string>
    <string name="wakka">Wakka</string>
    <string name="lulu">Lulu</string>
    <string name="auron">Auron</string>
    <string name="rikku">Rikku</string>
    <string name="kimari">Kimari</string>

    <string name="tool">Toolba01</string>
    <string name="up">up</string>
    <string name="action_edit">EDITAR</string>
    <string name="seettt">CONFIGURAR</string>
    <string name="action_about">ACERCA DE...</string>
    <string name="action_about2">REALIZADO POR: ENRIQUE OJEDA</string>
</resources>
